--- a/main.tex
+++ b/main.tex
@@ -5,9 +5,9 @@
 
 % Title and logo
 \title{A Fancy Title on Extremely Specialized Research Topic}
-\subtitle{Prospectus Defense}
+\subtitle{A Subtitle}
 \date{\today}
-\author{John Smith}
+\author{Jonas Hall}
 
 % Add bibliography file
 \bibliography{reference}
